--- a/profiles/templates/profiles/user.html
+++ b/profiles/templates/profiles/user.html
@@ -5,6 +5,11 @@
 
 {% block content %}
 <h1>{{ user.username }} </h1>
+<!-- {% if user.profile in request.user.is_following.all %}
+  Is Following
+{% endif %} -->
+<p>{% include 'profiles/snippet/follow_form.html' with username=user.username is_following=is_following %}</p>
+
 <form class='form' method='GET' action='.'>
 <input type='text' placeholder="Search.." name="q" value= '{{request.GET.q}}'>
 <button class='btn btn-default' type='submit'>Search</button>
